# I18nVault

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: I18nVaultConfig.cmake.in
docs/: README.zh_CN.md  trs_crypto.md
examples/: CMakeLists.txt  compile_time_i18n_example.cpp  i18n_demo.cpp
i18n/: en_US.json  zh_CN.json
src/: CMakeLists.txt  i18n_manager.cpp  i18n_manager.h
src/crypto/: CMakeLists.txt  hex_utils.c  hex_utils.h  sm4.c  sm4.h  sm4_gcm.c
test/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  download_nlohmann.py  encrypt_i18n.c  gen_i18n_keys.py  gen_trs_files.py  i18n_diff_check.py
